--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
   },
   "dependencies": {
     "@edx/brand": "npm:@edx/brand-openedx@1.1.0",
-    "@edx/frontend-platform": "1.15.6",
-    "@edx/paragon": "19.25.3",
+    "@edx/frontend-platform": "4.5.1",
+    "@edx/paragon": "20.45.0",
     "@fortawesome/fontawesome-svg-core": "1.2.36",
     "@fortawesome/free-brands-svg-icons": "5.15.4",
     "@fortawesome/free-regular-svg-icons": "5.15.4",
@@ -48,6 +48,8 @@
     "prop-types": "15.8.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
+    "react-intl": "5.25.1",
+    "react-paragon-topaz": "1.7.11",
     "react-redux": "7.2.8",
     "react-router": "5.3.3",
     "react-router-dom": "5.3.3",
