--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 NODE_ENV='development'
-PORT=2002
+PORT=2003
 ACCESS_TOKEN_COOKIE_NAME='edx-jwt-cookie-header-payload'
-BASE_URL='http://localhost:2002'
+BASE_URL='http://localhost:2003'
 CSRF_TOKEN_API_PATH='/csrf/api/v1/token'
 LANGUAGE_PREFERENCE_COOKIE_NAME='openedx-language-preference'
 LMS_BASE_URL='http://localhost:18000'
@@ -15,3 +15,5 @@ REFRESH_ACCESS_TOKEN_ENDPOINT='http://localhost:18000/login_refresh'
 SEGMENT_KEY=''
 SITE_NAME=localhost
 USER_INFO_COOKIE_NAME='edx-user-info'
+MFE_CONFIG_API_URL='http://localhost:18000/api/mfe_config/v1'
+SKILLABLE_PATH='skillable-dashboard'
