--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@fortawesome/react-fontawesome": "0.2.0",
     "core-js": "3.25.5",
     "jquery": "1.9.1",
+    "jsoneditor": "^10.1.0",
     "popper.js": "1.16.1",
     "prop-types": "15.8.1",
     "react": "16.14.0",
