feat: use students endpoint of course operation for ccx clases

--- a/.env.development
+++ b/.env.development
@@ -17,3 +17,4 @@ SITE_NAME=localhost
 USER_INFO_COOKIE_NAME='edx-user-info'
 MFE_CONFIG_API_URL='http://localhost:18000/api/mfe_config/v1'
 SKILLABLE_PATH='skillable-dashboard'
+COURSE_OPERATIONS_API_V2_BASE_URL='http://localhost:18000/pearson_course_operation/api/v2'
